Add support for a list of i18n functions
Summary:
Changes the interface from a visitor that only matches
the $_ function to a function that returns a visitor for
any number of custom i18n functions.

Test Plan:
Run the following script:

    var visitors = require("react-tools/vendor/fbtransform/visitors");
    var jstransform = require('jstransform');
    var jsxI18n = require('./index.js');

    process.stdin.resume();
    process.stdin.setEncoding("utf-8");

    var js = "";
    process.stdin.on("data", function(data) {
        js += data;
    });

    process.stdin.on("end", function() {
        var visitorList = jsxI18n.getVisitorList([
            "$_", "$i18nDoNotTranslate"
        ]).concat(visitors.getAllVisitors());
        js = jstransform.transform(visitorList, js).code;

        process.stdout.write(js);
    });

on the input

    var x = <div><$_ name={world}>hello %(name)s</$_></div>;
    var x = <div><$_ name={world}>hello %(name)s</$_></div>;
    var x = <div><$i18nDoNotTranslate>test</$i18nDoNotTranslate></div>;

and got the output

    var x = React.createElement("div", null, $_({name: world}, "hello %(name)s"));
    var x = React.createElement("div", null, $_({name: world}, "hello %(name)s"));
    var x = React.createElement("div", null, $i18nDoNotTranslate(null, "test"));

TODO: Write tests in the future

Auditors: james

Subscribers: alpert

--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "jsx-i18n",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "esprima-fb": "~6001.1001.0-dev-harmony-fb",
-    "jstransform": "~6.3.2"
+    "jstransform": "~6.3.2",
+    "react-tools": "^0.12.0"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "description": "Simple [jstransform](https://github.com/facebook/jstransform) pass for use with the JSX transformer in React 0.12+ to convert JSX `<$_>...</$_>` tags (only) to `$_(...)` calls, to simulate how React 0.11 behaved.",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Khan/jsx-i18n.git"
+  },
+  "author": "Ben Alpert",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Khan/jsx-i18n/issues"
+  },
+  "homepage": "https://github.com/Khan/jsx-i18n"
 }
